Code changes for product service

--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Service specific properties
 spring.application.name = ProductService
 server.port = 9090
-server.servlet.context-path = /product
+server.servlet.context-path = /product-service
 
 # Swagger Properties
 swagger.api.title = Product Service Documentation
