--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# Service specific properties
+# Service Specific Properties
 spring.application.name = ProductService
 server.port = 9090
 server.servlet.context-path = /product-service
@@ -8,3 +8,11 @@ swagger.api.title = Product Service Documentation
 swagger.api.description = This document contains API info of Product Service
 swagger.api.version = 1.0
 swagger.api.controller.basepackage = com.eliteshoppy.productservice.controller
+
+# MongoDb Properties
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.username=admin
+spring.data.mongodb.password=1234
+spring.data.mongodb.database=product_db
