User service and common module added

--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 # Service Specific Properties
-spring.application.name = ProductService
-server.port = 9090
-server.servlet.context-path = /product-service
+spring.application.name=product-service
+server.port=9090
+server.servlet.context-path=/product-service
 
 # Swagger Properties
-swagger.api.title = Product Service Documentation
-swagger.api.description = This document contains API info of Product Service
-swagger.api.version = 1.0
-swagger.api.controller.basepackage = com.eliteshoppy.productservice.controller
+swagger.api.title=Product Service Documentation
+swagger.api.description=This document contains API info of Product Service
+swagger.api.version=1.0
+swagger.api.controller.basepackage=com.eliteshoppy.productservice.controller
 
 # MongoDb Properties
 spring.data.mongodb.host=localhost
