--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -12,10 +12,10 @@
 	</parent>
 
 	<groupId>com.eliteshoppy</groupId>
-	<artifactId>product-service</artifactId>
+	<artifactId>user-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Product-Service</name>
-	<description>This service contains product related operations for Elite Shoppy</description>
+	<name>user-service</name>
+	<description>This service contains user related operations for Elite Shoppy</description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -31,11 +31,6 @@
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger2</artifactId>
 			<version>2.9.2</version>
@@ -49,6 +44,11 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.eliteshoppy</groupId>
