--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -9,6 +9,10 @@ swagger.api.description=This document contains API info of Product Service
 swagger.api.version=1.0
 swagger.api.controller.basepackage=com.eliteshoppy.productservice.controller
 
+# Eureka Server Properties
+eureka.client.serviceUrl.defaultZone=http://localhost:9099/eureka
+eureka.client.instance.preferIpAdress=True
+
 # MongoDb Properties
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
