Added authentication service

--- a/eliteshoppy-gateway/src/main/resources/application.properties
+++ b/eliteshoppy-gateway/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 # Application Properties
 spring.application.name=eliteshoppy-gateway
 server.port=8111
+endpoints.routes.enabled=true
+management.endpoints.web.exposure.include=*
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=5000
 
 # Eureka Properties
 eureka.instance.preferIpAddress=true
 eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
-eureka.client.serviceUrl.defaultZone=http://localhost:9099/eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
