--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 # Service Specific Properties
 spring.application.name=product-service
 server.port=9090
-server.servlet.context-path=/product-service
 
 # Swagger Properties
 swagger.api.title=Product Service Documentation
@@ -10,7 +9,8 @@ swagger.api.version=1.0
 swagger.api.controller.basepackage=com.eliteshoppy.productservice.controller
 
 # Eureka Server Properties
-eureka.client.serviceUrl.defaultZone=http://localhost:9099/eureka
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.registerWithEureka=true
 eureka.client.instance.preferIpAdress=True
 
 # MongoDb Properties
