--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -1,14 +1,20 @@
 # Service Specific Properties
 spring.application.name=auth-service
 server.port=2222
-spring.h2.console.enabled=true
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# User Defined Properties
+jwt.client_id=eliteshoppyclient
+jwt.client_secret=$2a$10$iaIC6lnBaHaMAUAYiCkGBefx0whKn4fic31zPMs5YHpi6Mucq994a
+jwt.client_secret_decoded=myclientsecret
 
 # Eureka Server Properties
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 eureka.client.instance.preferIpAdress=True
+
+# MongoDb Properties
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.authentication-database=auth_db
+spring.data.mongodb.username=admin
+spring.data.mongodb.password=1234
+spring.data.mongodb.database=admin_db
