Auth service code changes

--- a/eliteshoppy-gateway/src/main/resources/application.properties
+++ b/eliteshoppy-gateway/src/main/resources/application.properties
@@ -4,6 +4,7 @@ server.port=8111
 endpoints.routes.enabled=true
 management.endpoints.web.exposure.include=*
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=5000
+zuul.sensitiveHeaders=Cookie,Set-Cookie
 
 # Eureka Properties
 eureka.instance.preferIpAddress=true
