--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -20,3 +20,14 @@ spring.data.mongodb.authentication-database=product_db
 spring.data.mongodb.username=admin
 spring.data.mongodb.password=1234
 spring.data.mongodb.database=product_db
+
+# OAuth2 Security
+eliteshoppy.gateway.url=http://localhost:8111/auth-service
+security.oauth2.client.clientId=eliteshoppyclient
+security.oauth2.client.clientSecret=myclientsecret
+security.oauth2.client.accessTokenUri=${eliteshoppy.gateway.url}/oauth/token
+security.oauth2.client.userAuthorizationUri=${eliteshoppy.gateway.url}/oauth
+security.oauth2.client.tokenName=access_token
+security.oauth2.client.authenticationScheme=query
+security.oauth2.client.clientAuthenticationScheme=form
+security.oauth2.resource.userInfoUri=${eliteshoppy.gateway.url}/useraccount/me
