--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -15,6 +15,6 @@ eureka.client.instance.preferIpAdress=True
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.authentication-database=auth_db
-spring.data.mongodb.username=admin
+spring.data.mongodb.username=auth_user
 spring.data.mongodb.password=1234
-spring.data.mongodb.database=admin_db
+spring.data.mongodb.database=auth_db
