--- a/eliteshoppy-web/Dockerfile
+++ b/eliteshoppy-web/Dockerfile
@@ -14,6 +14,6 @@ RUN mvn -f /home/app/pom.xml clean package
 # Package Stage
 #
 FROM openjdk:8
-COPY --from=build /home/app/target/*.jar /usr/local/lib/app.jar
-EXPOSE 8761
+COPY --from=build /home/app/target/eliteshoppy-web-0.0.1-SNAPSHOT.jar /usr/local/lib/app.jar
+EXPOSE 8081
 ENTRYPOINT ["java", "-jar", "/usr/local/lib/app.jar"]
