--- a/auth-service/Dockerfile
+++ b/auth-service/Dockerfile
@@ -1,10 +1,16 @@
 #
 # Build stage
 #
+# Build eliteshoppy-common
 FROM maven:3.6-jdk-8 AS build
+COPY eliteshoppy-commons /tmp
+RUN mvn -f /tmp/eliteshoppy-commons/pom.xml clean install
+
+# Build main project
 COPY auth-service/src /home/app/src
 COPY auth-service/pom.xml /home/app/pom.xml
 RUN mvn -f /home/app/pom.xml clean package
+
 
 #
 # Package Stage
