--- a/product-service/Dockerfile
+++ b/product-service/Dockerfile
@@ -3,7 +3,7 @@
 #
 # Build eliteshoppy-common
 FROM maven:3.6-jdk-8 AS build
-COPY eliteshoppy-commons /tmp
+COPY eliteshoppy-commons /tmp/eliteshoppy-commons
 RUN mvn -f /tmp/eliteshoppy-commons/pom.xml clean install
 
 # Build main project
