Web content  code format

--- a/eliteshoppy-gateway/src/main/resources/application.properties
+++ b/eliteshoppy-gateway/src/main/resources/application.properties
@@ -6,6 +6,9 @@ management.endpoints.web.exposure.include=*
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=5000
 zuul.sensitiveHeaders=Cookie,Set-Cookie
 
+# Use defined properties
+es.gateway.crossOriginUrl=http://localhost:8081
+
 # Eureka Properties
 eureka.instance.preferIpAddress=true
 eureka.client.registerWithEureka=true
