UI Changed using thymeleaf

--- a/eliteshoppy-web/src/main/resources/application.properties
+++ b/eliteshoppy-web/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+# Service Specific Properties
 server.port=8081
+spring.thymeleaf.template-loader-path=classpath:/templates
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
