--- a/eliteshoppy-web/src/main/resources/application.properties
+++ b/eliteshoppy-web/src/main/resources/application.properties
@@ -3,3 +3,9 @@ server.port=8081
 spring.thymeleaf.template-loader-path=classpath:/templates
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
+
+# User defined properties
+es.api.url=http://localhost:8111
+es.api.client_id=eliteshoppyclient
+es.api.client_secret=myclientsecret
+es.api.grant_type=password
