--- a/eliteshoppy-gateway/src/main/resources/application.properties
+++ b/eliteshoppy-gateway/src/main/resources/application.properties
@@ -4,6 +4,8 @@ server.port=8111
 endpoints.routes.enabled=true
 management.endpoints.web.exposure.include=*
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=5000
+zuul.host.connect-timeout-millis=20000
+zuul.host.socket-timeout-millis=60000
 zuul.sensitiveHeaders=Cookie,Set-Cookie
 
 # Use defined properties
