Refresh token authorization code

--- a/eliteshoppy-gateway/src/main/resources/application.properties
+++ b/eliteshoppy-gateway/src/main/resources/application.properties
@@ -2,10 +2,16 @@
 spring.application.name=eliteshoppy-gateway
 server.port=8111
 endpoints.routes.enabled=true
+zuul.sensitiveHeaders=Cookie,Set-Cookie
 management.endpoints.web.exposure.include=*
+
+# For Gateway timeout issues
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=15000
+hystrix.command.default.execution.timeout.enabled=false
+ribbon.ReadTimeout=20000
+ribbon.ConnectTimeout=20000
 zuul.host.connect-timeout-millis=20000
 zuul.host.socket-timeout-millis=60000
-zuul.sensitiveHeaders=Cookie,Set-Cookie
 
 # Use defined properties
 es.gateway.crossOriginUrl=http://localhost:8081
