--- a/eureka-server/Dockerfile
+++ b/eureka-server/Dockerfile
@@ -2,8 +2,8 @@
 # Build stage
 #
 FROM maven:3.6-jdk-8 AS build
-COPY eureka-server/src /home/app/src
-COPY eureka-server/pom.xml /home/app/pom.xml
+COPY /eureka-server/src /home/app/src
+COPY /eureka-server/pom.xml /home/app/pom.xml
 RUN mvn -f /home/app/pom.xml clean package
 
 #
