--- a/auth-service/Dockerfile
+++ b/auth-service/Dockerfile
@@ -3,12 +3,12 @@
 #
 # Build eliteshoppy-common
 FROM maven:3.6-jdk-8 AS build
-COPY /eliteshoppy-commons /tmp/eliteshoppy-commons
+COPY eliteshoppy-commons /tmp/eliteshoppy-commons
 RUN mvn -f /tmp/eliteshoppy-commons/pom.xml clean install
 
 # Build main project
-COPY /auth-service/src /home/app/src
-COPY /auth-service/pom.xml /home/app/pom.xml
+COPY auth-service/src /home/app/src
+COPY auth-service/pom.xml /home/app/pom.xml
 RUN mvn -f /home/app/pom.xml clean package
 
 
