--- a/config-server/Dockerfile
+++ b/config-server/Dockerfile
@@ -4,14 +4,14 @@ MAINTAINER pradeeshbm67@gmail.com
 # Build stage
 #
 FROM maven:3.6-jdk-8 AS build
-COPY eliteshoppy-gateway/src /home/app/src
-COPY eliteshoppy-gateway/pom.xml /home/app/pom.xml
+COPY config-server/src /home/app/src
+COPY config-server/pom.xml /home/app/pom.xml
 RUN mvn -f /home/app/pom.xml clean package
 
 #
 # Package Stage
 #
 FROM openjdk:8
-COPY --from=build /home/app/target/eliteshoppy-gateway-0.0.1-SNAPSHOT.jar /usr/local/lib/app.jar
-EXPOSE 8111
+COPY --from=build /home/app/target/config-server-0.0.1-SNAPSHOT.jar /usr/local/lib/app.jar
+EXPOSE 8888
 ENTRYPOINT ["java", "-jar", "/usr/local/lib/app.jar"]
