--- a/eliteshoppy-gateway/src/main/resources/application.properties
+++ b/eliteshoppy-gateway/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # Application Properties
 spring.application.name=eliteshoppy-gateway
 server.port=8111
+spring.cloud.config.uri=http://localhost:8888
 endpoints.routes.enabled=true
 zuul.sensitiveHeaders=Cookie,Set-Cookie
 management.endpoints.web.exposure.include=*
