--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # Service Specific Properties
 spring.application.name=product-service
 server.port=9090
+spring.cloud.config.uri=http://localhost:8888
 
 # Swagger Properties
 swagger.api.title=Product Service Documentation
