--- a/application-properties/auth-service.properties
+++ b/application-properties/auth-service.properties
@@ -1,7 +1,6 @@
 # Service Specific Properties
 spring.application.name=auth-service
 server.port=8082
-spring.cloud.config.uri=http://localhost:8888
 
 # User Defined Properties
 jwt.client_id=eliteshoppyclient
@@ -9,7 +8,7 @@ jwt.client_secret=$2a$10$iaIC6lnBaHaMAUAYiCkGBefx0whKn4fic31zPMs5YHpi6Mucq994a
 jwt.client_secret_decoded=myclientsecret
 
 # Eureka Server Properties
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://35.224.223.166:8761/eureka
 eureka.client.instance.preferIpAdress=True
 
 # MongoDb Properties
