--- a/eliteshoppy-gateway/src/main/resources/application.properties
+++ b/eliteshoppy-gateway/src/main/resources/application.properties
@@ -20,4 +20,6 @@ es.gateway.crossOriginUrl=http://localhost:8081
 eureka.instance.preferIpAddress=true
 eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://35.224.223.166:8761/eureka
+eureka.instance.prefer-ip-address=true
+eureka.instance.ip-address=35.224.223.166
