--- a/application-properties/eliteshoppy-gateway.properties
+++ b/application-properties/eliteshoppy-gateway.properties
@@ -1,7 +1,6 @@
 # Application Properties
 spring.application.name=eliteshoppy-gateway
 server.port=8111
-spring.cloud.config.uri=http://localhost:8888
 endpoints.routes.enabled=true
 zuul.sensitiveHeaders=Cookie,Set-Cookie
 management.endpoints.web.exposure.include=*
@@ -21,4 +20,4 @@ es.gateway.crossOriginUrl=http://localhost:8081
 eureka.instance.preferIpAddress=true
 eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://35.224.223.166:8761/eureka
