--- a/application-properties/product-service.properties
+++ b/application-properties/product-service.properties
@@ -1,7 +1,6 @@
 # Service Specific Properties
 spring.application.name=product-service
 server.port=9090
-spring.cloud.config.uri=http://localhost:8888
 
 # Swagger Properties
 swagger.api.title=Product Service Documentation
@@ -10,7 +9,7 @@ swagger.api.version=1.0
 swagger.api.controller.basepackage=com.eliteshoppy.productservice.controller
 
 # Eureka Server Properties
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://35.224.223.166:8761/eureka
 eureka.client.registerWithEureka=true
 eureka.client.instance.preferIpAdress=True
 
