--- a/eliteshoppy-gateway/src/main/resources/bootstrap.properties
+++ b/eliteshoppy-gateway/src/main/resources/bootstrap.properties
@@ -1,4 +1,3 @@
 # Cloud configuration properties
 spring.cloud.config.name=eliteshoppy-gateway
-spring.cloud.config.discovery.service-id=config-server
-spring.cloud.config.discovery.enabled=true
+spring.cloud.config.uri=http://34.66.129.167:8888
