--- a/application-properties/product-service.properties
+++ b/application-properties/product-service.properties
@@ -14,9 +14,9 @@ eureka.client.registerWithEureka=true
 eureka.client.instance.preferIpAdress=True
 
 # MongoDb Properties
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=eliteshoppy-zcji9.mongodb.net
 spring.data.mongodb.port=27017
-spring.data.mongodb.authentication-database=product_db
+spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.username=admin
 spring.data.mongodb.password=1234
 spring.data.mongodb.database=product_db
