--- a/config-server/src/main/resources/bootstrap.properties
+++ b/config-server/src/main/resources/bootstrap.properties
@@ -1,6 +1,7 @@
 # Service Specific Properties
 spring.application.name=es-config-server
 server.port=8888
+spring.cloud.config.profiles=native
 
 # Configuration Sources
 spring.cloud.config.server.git.uri=https://github.com/Pradeeshbm/elite-shoppy
