--- a/application-properties/eliteshoppy-gateway.properties
+++ b/application-properties/eliteshoppy-gateway.properties
@@ -21,3 +21,5 @@ eureka.instance.preferIpAddress=true
 eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
 eureka.client.serviceUrl.defaultZone=http://35.224.223.166:8761/eureka
+eureka.instance.prefer-ip-address=true
+eureka.instance.ip-address=35.224.223.166
