--- a/application-properties/auth-service.properties
+++ b/application-properties/auth-service.properties
@@ -9,7 +9,8 @@ jwt.client_secret_decoded=myclientsecret
 
 # Eureka Server Properties
 eureka.client.serviceUrl.defaultZone=http://35.224.223.166:8761/eureka
-eureka.client.instance.preferIpAdress=True
+eureka.instance.prefer-ip-address=true
+eureka.instance.ip-address=35.224.223.166
 
 # MongoDb Properties
 #spring.data.mongodb.host=eliteshoppy-zcji9.mongodb.net
