--- a/application-properties/eliteshoppy-gateway.properties
+++ b/application-properties/eliteshoppy-gateway.properties
@@ -16,10 +16,8 @@ zuul.host.socket-timeout-millis=60000
 # Use defined properties
 es.gateway.crossOriginUrl=http://localhost:8081
 
-# Eureka Properties
-eureka.instance.preferIpAddress=true
-eureka.client.registerWithEureka=true
-eureka.client.fetchRegistry=true
+# Eureka Server Properties
 eureka.client.serviceUrl.defaultZone=http://35.224.223.166:8761/eureka
 eureka.instance.prefer-ip-address=true
 eureka.instance.ip-address=35.224.223.166
+eureka.client.fetchRegistry=true
