--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -8,7 +8,7 @@ jwt.client_secret=$2a$10$iaIC6lnBaHaMAUAYiCkGBefx0whKn4fic31zPMs5YHpi6Mucq994a
 jwt.client_secret_decoded=myclientsecret
 
 # Eureka Server Properties
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://35.224.223.166:8761/eureka
 eureka.client.instance.preferIpAdress=True
 
 # MongoDb Properties
