Product service config update

--- a/application-properties/product-service.properties
+++ b/application-properties/product-service.properties
@@ -10,8 +10,8 @@ swagger.api.controller.basepackage=com.eliteshoppy.productservice.controller
 
 # Eureka Server Properties
 eureka.client.serviceUrl.defaultZone=http://35.224.223.166:8761/eureka
-eureka.client.registerWithEureka=true
-eureka.client.instance.preferIpAdress=True
+eureka.instance.prefer-ip-address=true
+eureka.instance.ip-address=35.224.223.166
 
 # MongoDb Properties
 spring.data.mongodb.host=eliteshoppy-zcji9.mongodb.net
