--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -9,8 +9,7 @@ swagger.api.version=1.0
 swagger.api.controller.basepackage=com.eliteshoppy.productservice.controller
 
 # Eureka Server Properties
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-eureka.client.registerWithEureka=true
+eureka.client.serviceUrl.defaultZone=http://35.224.223.166:8761/eureka
 eureka.client.instance.preferIpAdress=True
 
 # MongoDb Properties
