--- a/auth-service/src/main/resources/bootstrap.properties
+++ b/auth-service/src/main/resources/bootstrap.properties
@@ -1,3 +1,4 @@
 # Cloud configuration properties
+spring.application.name=auth-service
 spring.cloud.config.name=auth-service
 spring.cloud.config.uri=http://34.66.129.167:8888
