--- a/eliteshoppy-gateway/src/main/resources/bootstrap.properties
+++ b/eliteshoppy-gateway/src/main/resources/bootstrap.properties
@@ -1,3 +1,4 @@
 # Cloud configuration properties
+spring.application.name=eliteshoppy-gateway
 spring.cloud.config.name=eliteshoppy-gateway
 spring.cloud.config.uri=http://34.66.129.167:8888
