Properties file changes

--- a/application-properties/product-service.properties
+++ b/application-properties/product-service.properties
@@ -14,8 +14,7 @@ eureka.instance.prefer-ip-address=true
 eureka.instance.ip-address=35.226.102.101
 
 # MongoDb Properties
-spring.data.mongodb.host=eliteshoppy-zcji9.mongodb.net
-spring.data.mongodb.port=27017
+spring.data.mongodb.uri=mongodb+srv://admin:1234@eliteshoppy-zcji9.mongodb.net/test?retryWrites=true
 spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.username=admin
 spring.data.mongodb.password=1234
