--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -12,8 +12,7 @@ eureka.client.serviceUrl.defaultZone=http://35.226.102.101:8761/eureka
 eureka.client.instance.preferIpAdress=True
 
 # MongoDb Properties
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
+spring.data.mongodb.uri=mongodb+srv://admin:1234@eliteshoppy-zcji9.mongodb.net/test?retryWrites=true
 spring.data.mongodb.authentication-database=product_db
 spring.data.mongodb.username=admin
 spring.data.mongodb.password=1234
