Gateway url changes

--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -19,7 +19,7 @@ spring.data.mongodb.password=1234
 spring.data.mongodb.database=product_db
 
 # OAuth2 Security
-eliteshoppy.gateway.url=http://localhost:8111/auth-service
+eliteshoppy.gateway.url=http://35.224.111.165:8111/auth-service
 security.oauth2.client.clientId=eliteshoppyclient
 security.oauth2.client.clientSecret=myclientsecret
 security.oauth2.client.accessTokenUri=${eliteshoppy.gateway.url}/oauth/token
