Code changes for config client

--- a/config-server/src/main/resources/bootstrap.properties
+++ b/config-server/src/main/resources/bootstrap.properties
@@ -2,6 +2,7 @@
 spring.application.name=es-config-server
 server.port=8888
 spring.cloud.config.profiles=native
+SPRING_PROFILES_ACTIVE=native
 
 # Configuration Sources
 spring.cloud.config.server.git.uri=https://github.com/Pradeeshbm/elite-shoppy
