--- a/application-properties/eliteshoppy-gateway.properties
+++ b/application-properties/eliteshoppy-gateway.properties
@@ -18,6 +18,7 @@ es.gateway.crossOriginUrl=http://localhost:8081
 
 # Eureka Server Properties
 eureka.client.serviceUrl.defaultZone=http://35.226.102.101:8761/eureka
-eureka.instance.prefer-ip-address=true
-eureka.instance.ip-address=35.226.102.101
+eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
+#eureka.instance.prefer-ip-address=true
+#eureka.instance.ip-address=35.226.102.101
