Removed ip address from eureka property

--- a/eureka-server/src/main/resources/bootstrap.properties
+++ b/eureka-server/src/main/resources/bootstrap.properties
@@ -1,3 +1,4 @@
 # Cloud configuration properties
+spring.application.name=es-eureka-server
 spring.cloud.config.name=eureka-server
 spring.cloud.config.uri=http://104.197.17.72:8888
