--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -28,3 +28,10 @@ security.oauth2.client.tokenName=access_token
 security.oauth2.client.authenticationScheme=header
 security.oauth2.client.clientAuthenticationScheme=header
 security.oauth2.resource.userInfoUri=${eliteshoppy.gateway.url}/useraccount/me
+
+# Multipart File Properties
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.file-size-threshold=2KB
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
+file.upload-dir=/home/uploads
