--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -33,5 +33,6 @@ security.oauth2.resource.userInfoUri=${eliteshoppy.gateway.url}/useraccount/me
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=5MB
-spring.servlet.multipart.max-request-size=5MB
-file.upload-dir=/home/uploads
+spring.servlet.multipart.max-request-size=10MB
+es.gcloud.cloud-storage.bucket=product_image_bucket
+es.gcloud.cloud-storage.storage-dir=/product_images
