--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -31,6 +31,7 @@ security.oauth2.resource.userInfoUri=${eliteshoppy.gateway.url}/useraccount/me
 
 # Multipart File Properties
 spring.servlet.multipart.enabled=true
+spring.servlet.multipart.resolve-lazily=true
 spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=10MB
