Multipart issue fix

--- a/application-properties/eliteshoppy-gateway.properties
+++ b/application-properties/eliteshoppy-gateway.properties
@@ -22,6 +22,7 @@ eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
 
 # Multipart File Properties
+spring.http.multipart.enabled=true
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.resolve-lazily=true
 spring.servlet.multipart.file-size-threshold=2KB
