--- a/eliteshoppy-gateway/src/main/resources/application.properties
+++ b/eliteshoppy-gateway/src/main/resources/application.properties
@@ -23,6 +23,7 @@ eureka.client.serviceUrl.defaultZone=http://35.226.102.101:8761/eureka
 
 # Multipart File Properties
 spring.servlet.multipart.enabled=true
+spring.http.multipart.enabled=true
 spring.servlet.multipart.resolve-lazily=true
 spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=5MB
