--- a/application-properties/product-service.properties
+++ b/application-properties/product-service.properties
@@ -31,6 +31,7 @@ security.oauth2.client.clientAuthenticationScheme=header
 security.oauth2.resource.userInfoUri=${eliteshoppy.gateway.url}/useraccount/me
 
 # Multipart File Properties
+spring.http.multipart.enabled=true
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=5MB
