Google cloud storage image upload key added

--- a/product-service/Dockerfile
+++ b/product-service/Dockerfile
@@ -14,6 +14,9 @@ COPY product-service/src /home/app/src
 COPY product-service/pom.xml /home/app/pom.xml
 RUN mvn -f /home/app/pom.xml clean package
 
+# Export storage key as environment variable
+ENV GOOGLE_APPLICATION_CREDENTIALS=/home/app/src/main/resources/eliteshoppy-storage-access-key.json
+
 #
 # Package Stage
 #
