Storage authentication code added

--- a/application-properties/product-service.properties
+++ b/application-properties/product-service.properties
@@ -31,10 +31,12 @@ security.oauth2.client.clientAuthenticationScheme=header
 security.oauth2.resource.userInfoUri=${eliteshoppy.gateway.url}/useraccount/me
 
 # Multipart File Properties
-spring.http.multipart.enabled=true
 spring.servlet.multipart.enabled=true
+spring.http.multipart.enabled=true
+spring.servlet.multipart.resolve-lazily=true
 spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=10MB
 es.gcloud.cloud-storage.bucket=product_image_bucket
 es.gcloud.cloud-storage.storage-dir=/product_images
+es.gcloud.cloud-storage.storage-access-key-path=/home/app/src/main/resources/eliteshoppy-storage-access-key.json
