--- a/application-properties/product-search-service.properties
+++ b/application-properties/product-search-service.properties
@@ -4,3 +4,8 @@ server.port=9956
 # Eureka Server Properties
 eureka.client.serviceUrl.defaultZone=http://35.226.102.101:8761/eureka
 eureka.client.instance.preferIpAdress=True
+
+# Logger Properties
+logging.level=INFO
+logging.pattern.file=%d %p %c{1.} [%t] %m%n
+logging.pattern.console=%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
