--- a/application-properties/product-service.properties
+++ b/application-properties/product-service.properties
@@ -39,3 +39,8 @@ spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=10MB
 es.gcloud.cloud-storage.bucket=product_image_bucket
 es.gcloud.cloud-storage.storage-dir=product_images
+
+# Logger Properties
+logging.level=INFO
+logging.pattern.file=%d %p %c{1.} [%t] %m%n
+logging.pattern.console=%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
