Fixed logger bug

--- a/application-properties/es-web.properties
+++ b/application-properties/es-web.properties
@@ -2,7 +2,7 @@
 server.port=8081
 spring.thymeleaf.template-loader-path=classpath:/templates
 spring.thymeleaf.suffix=.html
-spring.thymeleaf.cache=false
+spring.thymeleaf.cache=true
 
 # User defined properties
 es.api.url=http://35.224.111.165:8111
