--- a/application-properties/product-service.properties
+++ b/application-properties/product-service.properties
@@ -41,4 +41,4 @@ es.gcloud.cloud-storage.bucket=product_image_bucket
 es.gcloud.cloud-storage.storage-dir=product_images
 
 # Logger Properties
-logging.level=INFO
+logging.level.root=INFO
