Product-search-service code changes

--- a/application-properties/product-search-service.properties
+++ b/application-properties/product-search-service.properties
@@ -6,6 +6,9 @@ eureka.client.serviceUrl.defaultZone=http://35.226.102.101:8761/eureka
 eureka.client.instance.preferIpAdress=True
 
 # Logger Properties
-logging.level=INFO
-logging.pattern.file=%d %p %c{1.} [%t] %m%n
-logging.pattern.console=%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
+logging.level.root=INFO
+
+# ElasticSearch Properties
+elasticsearch.clustername=es-elasticsearch-cluster
+elasticsearch.host=35.239.51.251
+elasticsearch.port=9200
