--- a/product-search-service/src/main/resources/application.properties
+++ b/product-search-service/src/main/resources/application.properties
@@ -6,6 +6,8 @@ eureka.client.serviceUrl.defaultZone=http://35.226.102.101:8761/eureka
 eureka.client.instance.preferIpAdress=True
 
 # Logger Properties
-logging.level=INFO
-logging.pattern.file=%d %p %c{1.} [%t] %m%n
-logging.pattern.console=%d{HH:mm:ss.SSS} [%t] %-5level %logger{36} - %msg%n
+logging.level.root=INFO
+
+# ElasticSearch Properties
+spring.data.elasticsearch.cluster-name=docker-cluster
+spring.data.elasticsearch.cluster-nodes=35.239.51.251:9200
