Property file modification as per spring boot 2

--- a/application-properties/product-search-service.properties
+++ b/application-properties/product-search-service.properties
@@ -9,6 +9,5 @@ eureka.client.instance.preferIpAdress=True
 logging.level.root=INFO
 
 # ElasticSearch Properties
-elasticsearch.clustername=es-elasticsearch-cluster
-elasticsearch.host=35.239.51.251
-elasticsearch.port=9200
+spring.data.elasticsearch.cluster-name=eliteshoppy-standard-cluster-01
+spring.data.elasticsearch.cluster-nodes=35.239.51.251:9200
