Pubsub properties added

--- a/application-properties/product-search-service.properties
+++ b/application-properties/product-search-service.properties
@@ -1,6 +1,10 @@
 # Service Specific Properties
 server.port=9956
 
+# User Defined Properties
+es.jms.topic.product-create=ES_TOPIC_PRODUCT_CREATE
+es.jms.topic.product-update=ES_TOPIC_PRODUCT_UPDATE
+
 # Eureka Server Properties
 eureka.client.serviceUrl.defaultZone=http://35.226.102.101:8761/eureka
 eureka.client.instance.preferIpAdress=True
