--- a/application-properties/product-service.properties
+++ b/application-properties/product-service.properties
@@ -2,6 +2,10 @@
 spring.application.name=product-service
 server.port=9090
 
+# User Defined Properties
+es.jms.topic.product-create=ES_TOPIC_PRODUCT_CREATE
+es.jms.topic.product-update=ES_TOPIC_PRODUCT_UPDATE
+
 # Swagger Properties
 swagger.api.title=Product Service Documentation
 swagger.api.description=This document contains API info of Product Service
