--- a/application-properties/product-service.properties
+++ b/application-properties/product-service.properties
@@ -5,6 +5,8 @@ server.port=9090
 # User Defined Properties
 es.jms.topic.product-create=ES_TOPIC_PRODUCT_CREATE
 es.jms.topic.product-update=ES_TOPIC_PRODUCT_UPDATE
+es.jms.topic.subscriber.product-create=ES_T_SUBSCRIPTION_PRODUCT_CREATE
+es.jms.topic.subscriber.product-update=ES_T_SUBSCRIPTION_PRODUCT_UPDATE
 
 # Swagger Properties
 swagger.api.title=Product Service Documentation
