--- a/product-search-service/src/main/resources/application.properties
+++ b/product-search-service/src/main/resources/application.properties
@@ -4,6 +4,8 @@ server.port=9956
 # User Defined Properties
 es.jms.topic.product-create=ES_TOPIC_PRODUCT_CREATE
 es.jms.topic.product-update=ES_TOPIC_PRODUCT_UPDATE
+es.jms.topic.subscriber.product-create=ES_T_SUBSCRIPTION_PRODUCT_CREATE
+es.jms.topic.subscriber.product-update=ES_T_SUBSCRIPTION_PRODUCT_UPDATE
 
 # Eureka Server Properties
 eureka.client.serviceUrl.defaultZone=http://35.226.102.101:8761/eureka
