Added path to key file

--- a/application-properties/product-service.properties
+++ b/application-properties/product-service.properties
@@ -1,5 +1,4 @@
 # Service Specific Properties
-spring.application.name=product-service
 server.port=9090
 
 # User Defined Properties
@@ -7,6 +6,8 @@ es.jms.topic.product-create=ES_TOPIC_PRODUCT_CREATE
 es.jms.topic.product-update=ES_TOPIC_PRODUCT_UPDATE
 es.jms.topic.subscriber.product-create=ES_T_SUBSCRIPTION_PRODUCT_CREATE
 es.jms.topic.subscriber.product-update=ES_T_SUBSCRIPTION_PRODUCT_UPDATE
+spring.cloud.gcp.project-id=eliteshoppy
+spring.cloud.gcp.credentials.location=file:/home/app/eliteshoppy-pubsub-app-admin-access-key.json
 
 # Swagger Properties
 swagger.api.title=Product Service Documentation
@@ -16,11 +17,11 @@ swagger.api.controller.basepackage=com.eliteshoppy.productservice.controller
 
 # Eureka Server Properties
 eureka.client.serviceUrl.defaultZone=http://35.226.102.101:8761/eureka
-eureka.instance.prefer-ip-address=true
+eureka.client.instance.preferIpAdress=True
 
 # MongoDb Properties
 spring.data.mongodb.uri=mongodb+srv://admin:1234@eliteshoppy-zcji9.mongodb.net/test?retryWrites=true
-spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.authentication-database=product_db
 spring.data.mongodb.username=admin
 spring.data.mongodb.password=1234
 spring.data.mongodb.database=product_db
