Logger level changed

--- a/application-properties/product-service.properties
+++ b/application-properties/product-service.properties
@@ -46,4 +46,4 @@ es.gcloud.cloud-storage.bucket=product_image_bucket
 es.gcloud.cloud-storage.storage-dir=product_images
 
 # Logger Properties
-logging.level.root=ERROR
+logging.level.root=ALL
