--- a/product-service/Dockerfile
+++ b/product-service/Dockerfile
@@ -19,5 +19,6 @@ RUN mvn -f /home/app/pom.xml clean package
 #
 FROM gcr.io/eliteshoppy/access-key-image@sha256:c2c8dc7ff9a68ab609e9461f75f56d929a116767a299c33ac2e20ba77f133c9d
 COPY --from=build /home/app/target/product-service-0.0.1-SNAPSHOT.jar /usr/local/lib/app.jar
+ENV GOOGLE_CLOUD_PROJECT=eliteshoppy
 EXPOSE 9090
 ENTRYPOINT ["java", "-jar", "/usr/local/lib/app.jar"]
