--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -15,7 +15,7 @@ swagger.api.controller.basepackage=com.eliteshoppy.productservice.controller
 
 # Eureka Server Properties
 eureka.client.serviceUrl.defaultZone=http://35.226.102.101:8761/eureka
-eureka.client.instance.preferIpAdress=True
+eureka.instance.prefer-ip-address=true
 
 # MongoDb Properties
 spring.data.mongodb.uri=mongodb+srv://admin:1234@eliteshoppy-zcji9.mongodb.net/test?retryWrites=true
