--- a/application-properties/product-search-service.properties
+++ b/application-properties/product-search-service.properties
@@ -9,7 +9,7 @@ es.jms.topic.subscriber.product-update=ES_T_SUBSCRIPTION_PRODUCT_UPDATE
 
 # Eureka Server Properties
 eureka.client.serviceUrl.defaultZone=http://35.226.102.101:8761/eureka
-eureka.client.instance.preferIpAdress=True
+eureka.instance.prefer-ip-address=true
 
 # Logger Properties
 logging.level.root=INFO
