--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -4,8 +4,10 @@ server.port=9090
 # User Defined Properties
 es.jms.topic.product-create=ES_TOPIC_PRODUCT_CREATE
 es.jms.topic.product-update=ES_TOPIC_PRODUCT_UPDATE
+es.jms.topic.product-delete=ES_TOPIC_PRODUCT_DELETE
 es.jms.topic.subscriber.product-create=ES_T_SUBSCRIPTION_PRODUCT_CREATE
 es.jms.topic.subscriber.product-update=ES_T_SUBSCRIPTION_PRODUCT_UPDATE
+es.jms.topic.subscriber.product-delete=ES_T_SUBSCRIPTION_PRODUCT_DELETE
 
 # Swagger Properties
 swagger.api.title=Product Service Documentation
