Docker file changes

--- a/product-search-service/Dockerfile
+++ b/product-search-service/Dockerfile
@@ -14,7 +14,7 @@ RUN mvn -f /home/app/pom.xml clean package
 #
 # Package Stage
 #
-FROM openjdk:8
+FROM gcr.io/eliteshoppy/access-key-image@sha256:c2c8dc7ff9a68ab609e9461f75f56d929a116767a299c33ac2e20ba77f133c9d
 COPY --from=build /home/app/target/product-search-service-0.0.1-SNAPSHOT.jar /usr/local/lib/app.jar
 ENV GOOGLE_CLOUD_PROJECT=eliteshoppy
 EXPOSE 9956
