Review feature added

--- a/eliteshoppy-web/src/main/resources/application.properties
+++ b/eliteshoppy-web/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
 
 # User defined properties
-es.api.url=http://localhost:8111
+es.api.url=http://35.224.111.165:8111
 es.api.client_id=eliteshoppyclient
 es.api.client_secret=myclientsecret
 es.api.grant_type=password
