Review controller added

--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -46,3 +46,9 @@ es.gcloud.cloud-storage.storage-dir=product_images
 
 # Logger Properties
 logging.level.root=INFO
+
+# Secured Rest Call Properties
+hystrix.shareSecurityContext=true
+
+# FeignClient Properties
+es.feignclient.auth-service=auth-service
