Product property changes

--- a/application-properties/product-service.properties
+++ b/application-properties/product-service.properties
@@ -46,3 +46,6 @@ es.gcloud.cloud-storage.storage-dir=product_images
 
 # Logger Properties
 logging.level.root=INFO
+
+# Secured Rest Call Configuration
+hystrix.shareSecurityContext=true
